Fix banner text on mobile

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -52,7 +52,18 @@
   color: #fff;
 }
 
+@media(max-width: 768px){
+  #banner{
+    margin: auto;
+    text-align: center;
+  }
+
+  #bannerText{
+    padding-left: 0;
+  }
+}
+
 #bannerText h1{
-  font-size: 60px;
+  font-size: 50px;
 }
 
